--- a/SVPresentacion/appsettings.json
+++ b/SVPresentacion/appsettings.json
@@ -1,11 +1,6 @@
 {
-
-
-    "ConnectionStrings": {
-        "CadenaSql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=F:\\Documentos\\Source\\repos\\SintemaVentas\\DB\\DBProyecto.mdf;Trusted_Connection=True;TrustServerCertificate=True;"
-        
-
-
-
+    "ConnectionStrings": 
+    {
+        "CadenaSql": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=Ventas;Trusted_Connection=True;TrustServerCertificate=True;"
     }
 }
